# autobattler

./: CMakeLists.txt  README.md
include/: abilities.hpp  battle.hpp  units.hpp  weapon.hpp
src/: abilities.cpp  battle.cpp  main.cpp  units.cpp  weapon.cpp
